--- a/public/style.css
+++ b/public/style.css
@@ -75,16 +75,35 @@
     width: 100%;
     background-color: #181818;
     color: white;
+    padding: 0px 8%;
     display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-.footer-container {
-    width: 30%;
+.footer-logo {
     display: flex;
-    justify-content: space-between;
+    gap: 12px;
     align-items: center;
+    flex: 1;
+}
+
+.footer-content {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.footer-content-1, .footer-content-2, .footer-content-3 {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+}
+
+.footer-content-1 a, .footer-content-2 a, .footer-content-3 a {
+    cursor: pointer;
+    font-weight: 200;
+    color: white;
+    text-decoration: none;
 }
 
 .banner {
