--- a/public/style.css
+++ b/public/style.css
@@ -67,7 +67,6 @@
 #button-logout button:hover {
     background-color: #181818;
     color: white;
-    
 }
 
 .footer {
@@ -402,7 +401,7 @@
 .model-items-container {
     position: absolute;
     bottom: 7%;
-    left: 12%;
+    left: 9%;
     color: white;
     width: 78%;
 }
@@ -573,7 +572,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 200px;
+    margin-bottom: 50px;
     gap: 0;
 }
 
@@ -594,6 +593,62 @@
 
 .model-table td {
     border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+}
+
+.checkout-button {
+    margin: auto;
+    background-color: #181818;
+    color: white;
+    border: 0.5px solid rgb(0, 0, 0);
+    padding: 18px 65px;
+    font-size: 16px;
+    transition: background-color 0.5s ease;
+    cursor: pointer;
+    margin: 50px 0;
+}
+
+.checkout-button:hover {
+    background-color: white;
+    color: black;
+}
+
+.comment-wrapper {
+    width: 100%;
+    padding: 0px 15%;
+}
+
+.comment-input-container {
+    padding: 25px 3%;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 20px;
+}
+
+.comment-input-container textarea {
+    border: none;
+    width: 100%;
+    outline: none;
+    resize: none;
+}
+
+.comment-input-star img {
+    width: 30px;
+    cursor: pointer;
+}
+
+.comment-button {
+    background-color: #181818;
+    padding: 5px 20px;
+    border-radius: 20px;
+    border: 1px solid #181818;
+    color: white;
+    cursor: pointer;
+    font-weight: 500;
+    transition: background-color 0.5s ease;
+}
+
+.comment-button:hover {
+    background-color: white;
+    color: black;
 }
 
 .news-content-child {
