--- a/public/style.css
+++ b/public/style.css
@@ -612,6 +612,25 @@
     color: black;
 }
 
+.comment-header {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.comment-header p {
+    font-size: 28px;
+}
+
+.comment-header h3 {
+    font-size: 18px;
+    font-weight: 300;
+    color: white;
+    background-color: black;
+    padding: 2px 8px;
+    border-radius: 30%;
+}
+
 .comment-wrapper {
     width: 100%;
     padding: 0px 15%;
@@ -654,15 +673,11 @@
 .comment-container {
     display: flex;
     gap: 2%;
-    
-}
-
-.comment-image {
-    
+    margin: 40px 0;
 }
 
 .comment-image img {
-    width: 40px;
+    width: 45px;
 }
 
 .comment-display {
@@ -672,7 +687,13 @@
 .comment-display-header {
     display: flex;
     align-items: center;
-    gap: 4%;
+    gap: 2.5%;
+    margin-bottom: 10px;
+}
+
+.comment-display-header img {
+    width: 25px;
+    margin-top: 4px;
 }
 
 .news-content-child {
