--- a/public/style.css
+++ b/public/style.css
@@ -436,6 +436,14 @@
     font-size: 64px;
 }
 
+.model-items-right {
+    display: flex;
+    align-items: end;
+    gap: 10%;
+    justify-content: end;   
+    flex: 1;
+}
+
 .model-button {
     background-color: transparent;
     color: white;
@@ -470,6 +478,15 @@
     height: 100vh;
 }
 
+.like-container {
+    text-align: center;
+}
+
+.like-container img {
+    width: 36px;
+    margin-bottom: 2px;
+    cursor: pointer;
+}
 
 .model-child-wrapper {
     height: 100vh;
