--- a/public/style.css
+++ b/public/style.css
@@ -987,6 +987,78 @@
 
 .profile-wrapper-right {
     flex: 4;
+    margin: 0 5%;
+    /* background-color: aqua; */
+}
+
+.profile-data-container {
+    position: relative;
+    border: 2px solid black;
+    border-radius: 15px;
+    height: fit-content;
+}
+
+.profile-data-banner {
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-top-right-radius: 15px;
+    border-top-left-radius: 15px;
+    border-bottom: 2px solid black;
+    margin-bottom: 0;
+}
+
+.profile-data-content {
+    padding: 0 7.5% 0 22.5%;
+}
+
+.profile-data-pp {
+    position: absolute;
+    top: 100px;
+    left: 6%;
+    width: 128px;
+    border-radius: 100%;
+}
+
+.profile-data-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.profile-data-row {
+    display: flex;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.profile-data-row label {
+    flex: 1;
+}
+
+.profile-data-row input {
+    flex: 3;
+    width: 100%;
+    padding: 8px 26px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.profile-button {
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    padding: 8px 25px;
+    height: fit-content;
+    border-radius: 10px;
+    transition: background-color 0.5s ease;
+}
+
+.profile-button:hover{
+    background-color: white;
+    color: black;
 }
 
 .contact-wrapper {
