--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,49 @@
     scroll-behavior: smooth;
 }
 
+.auth-wrapper {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.auth-container {
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    padding: 20px 5%;
+    width: 45%;
+}
+
+.auth-header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    margin: 20px 0 40px 0;
+}
+
+.auth-header img {
+    width: 48px;
+}
+
+.auth-form {
+    display: flex;
+    flex-direction: column;
+}
+
+.auth-row {
+    margin-bottom: 20px;
+}
+
+.auth-row input {
+    margin-top: 10px;
+    padding: 8px 20px;
+    border-radius: 10px;
+    border: 1px solid black;
+    width: 100%;
+}
+
 .nav-wrapper {
     width: 100%;
     background-color: #181818;
@@ -446,7 +489,7 @@
     display: flex;
     align-items: end;
     gap: 10%;
-    justify-content: end;   
+    justify-content: end;
     flex: 1;
 }
 
@@ -705,6 +748,7 @@
 
 .comment-image img {
     width: 45px;
+    border-radius: 100%;
 }
 
 .comment-display {
@@ -1056,15 +1100,102 @@
     transition: background-color 0.5s ease;
 }
 
-.profile-button:hover{
+.profile-button:hover {
     background-color: white;
     color: black;
 }
 
+.transaction-table {
+    margin-top: 30px;
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.transaction-table-row {
+    border: 1px solid black;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.profile-transaction-child-container {
+    width: 100%;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 20px 40px;
+}
+
+.transaction-back {
+    width: 48px;
+    transform: rotate(180deg);
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.profile-transaction-child-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 7.5%;
+}
+
+.profile-transaction-child-container-left {
+    flex: 1;
+}
+
+.profile-transaction-child-container-right {
+    flex: 1;
+}
+
+.profile-transaction-child-sub {
+    margin: 15px 0;
+}
+
+.profile-transaction-child-table {
+    width: 100%;
+}
+
+.profile-transaction-child-table td {
+    padding: 5px 0;
+}
+
+.profile-account-wrapper {
+    width: 70%;
+}
+
+.profile-input-email {
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 6px 20px;
+}
+
+.password-input {
+    display: flex;
+    align-items: center;
+    border: 1px solid black;
+    width: 100%;
+    height: fit-content;
+    border-radius: 10px;
+    padding: 4px 20px;
+    margin-top: 10px;
+}
+
+.password-input input {
+    width: 100%;
+    border: none;
+}
+
+.password-input input:focus {
+    outline: none;
+}
+
+.password-input img {
+    width: 24px;
+    cursor: pointer;
+}
+
 .contact-wrapper {
     display: flex;
-    height: 100vh;
-    padding-left: 100px;
+    flex-direction: column;
 }
 
 .contact-text {
@@ -1073,10 +1204,11 @@
     justify-content: center;
     align-items: start;
     flex-direction: column;
+    margin-bottom: 40px;
 }
 
 .contact-text h1 {
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 .contact-form {
@@ -1088,7 +1220,7 @@
 
 .contact-form form {
     width: 70%;
-    padding: 20px 30px;
+    padding: 10px 30px;
     display: flex;
     border-radius: 5px;
     flex-direction: column;
@@ -1101,7 +1233,6 @@
     padding: 12px 10px;
     border-radius: 5px;
     border: 1px solid rgb(210, 210, 210);
-
 }
 
 .contact-form textarea {
@@ -1113,7 +1244,7 @@
 
 .contact-form label {
     display: block;
-    margin: 20px 0 10px 0;
+    margin-bottom: 10px;
 }
 
 .contact-button {
