--- a/public/style.css
+++ b/public/style.css
@@ -86,18 +86,18 @@
     display: flex;
     justify-content: end;
     align-items: center;
-    gap: 5%;
+    gap: 4%;
 }
 
 .nav-menu a {
     font-weight: 500;
 }
 
-#button-logout {
+#button-login {
     color: black;
 }
 
-#button-logout button {
+#button-login button {
     background-color: white;
     padding: 5px 20px;
     border-radius: 20px;
@@ -107,7 +107,7 @@
     transition: background-color 0.5s ease;
 }
 
-#button-logout button:hover {
+#button-login button:hover {
     background-color: #181818;
     color: white;
 }
