--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
 }
-
+/* 
 .auth-wrapper {
     height: 100vh;
     display: flex;
@@ -47,7 +47,7 @@
     border-radius: 10px;
     border: 1px solid black;
     width: 100%;
-}
+} */
 
 .nav-wrapper {
     width: 100%;
@@ -117,37 +117,42 @@
     width: 100%;
     background-color: #181818;
     color: white;
-    padding: 0px 8%;
     display: flex;
+    justify-content: center;
 }
 
-.footer-logo {
+/* .footer-logo {
     display: flex;
     gap: 12px;
     align-items: center;
     flex: 1;
-}
+} */
 
 .footer-content {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.footer-content-1,
-.footer-content-2,
-.footer-content-3 {
     display: flex;
     flex-direction: column;
-    gap: 6px;
+    align-items: center;
+    margin: 23px 0px;
+    justify-content: space-between;
 }
 
-.footer-content-1 a,
-.footer-content-2 a,
-.footer-content-3 a {
+.footer-content-1 {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-content-1 h2 {
+    font-size: 32px;
+}
+
+.footer-content-2 {
+    display: flex;
+    gap: 49px;
+}
+
+.footer-content-2 a {
     cursor: pointer;
-    font-weight: 200;
+    font-weight: 800;
     color: white;
     text-decoration: none;
 }
