--- a/public/style.css
+++ b/public/style.css
@@ -1268,14 +1268,7 @@
 }
 
 .admin-wrapper {
-    display: flex;
-    justify-content: space-around;
-}
-
-.admin-container {
-    padding: 20px 30px;
-    border: 1px solid black;
-    flex: 1;
+    position: relative;
 }
 
 /* .user-wrapper {
